--- a/Bougle.French.Glaff.Cmd/Bougle.French.Glaff.Cmd.csproj
+++ b/Bougle.French.Glaff.Cmd/Bougle.French.Glaff.Cmd.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Bougle.French.Glaff.Storage\Bougle.French.Glaff.Storage.csproj" />
+  </ItemGroup>
+
 </Project>
