--- a/Bougle.French.Glaff.Web/appsettings.json
+++ b/Bougle.French.Glaff.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Sqlite": "Data Source=C:\\Users\\VR1\\Dropbox\\Projets Perso\\Bougle\\glaff.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
