Add working Dockerfile and docker-compose.

--- a/Bougle.French.Glaff.Web/Bougle.French.Glaff.Web.csproj
+++ b/Bougle.French.Glaff.Web/Bougle.French.Glaff.Web.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <UserSecretsId>ae420c42-094e-4e5a-9c8c-a229b630aa9a</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
