Embed db file in container, workes in Release mode.

--- a/Bougle.French.Glaff.Web/appsettings.json
+++ b/Bougle.French.Glaff.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Sqlite": "Data Source=C:\\Users\\VR1\\Dropbox\\Projets Perso\\Bougle\\glaff.db"
+    "Sqlite": "Data Source=/db/glaff.db"
   },
   "Logging": {
     "LogLevel": {
