--- a/Bougle.French.Glaff.Contracts/Bougle.French.Glaff.Contracts.csproj
+++ b/Bougle.French.Glaff.Contracts/Bougle.French.Glaff.Contracts.csproj
@@ -1,10 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>.\Bougle.French.Glaff.Contracts.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>.\Bougle.French.Glaff.Contracts.xml</DocumentationFile>
   </PropertyGroup>
 
