--- a/Bougle.French.Glaff.Web/Bougle.French.Glaff.Web.csproj
+++ b/Bougle.French.Glaff.Web/Bougle.French.Glaff.Web.csproj
@@ -11,6 +11,15 @@
     <DocumentationFile>.\Bougle.French.Glaff.Web.xml</DocumentationFile>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <WarningLevel>0</WarningLevel>
+    <DocumentationFile>.\Bougle.French.Glaff.Web.xml</DocumentationFile>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\.editorconfig" Link=".editorconfig" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.14" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
